Reduce usage of commons-io where JDK functions will do