@@ -21,7 +21,6 @@ import com.thoughtworks.go.config.CruiseConfig;
 import com.thoughtworks.go.config.MagicalGoConfigXmlLoader;
 import com.thoughtworks.go.helper.ConfigFileFixture;
 import com.thoughtworks.go.util.ConfigElementImplementationRegistryMother;
-import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayInputStream;
@@ -36,7 +35,7 @@ public class UniqueRunIfStatusValidatorTest {
     public void shouldThrowExceptionWhenThereIsMoreThanOneOnCancelInEachTask() {
         try {
             final ByteArrayInputStream inputStream = new ByteArrayInputStream(ConfigFileFixture.CONTAINS_MULTI_SAME_STATUS_RUN_IF.getBytes());
-            new MagicalGoConfigXmlLoader(new ConfigCache(), ConfigElementImplementationRegistryMother.withNoPlugins()).loadConfigHolder(IOUtils.toString(inputStream, UTF_8));
+            new MagicalGoConfigXmlLoader(new ConfigCache(), ConfigElementImplementationRegistryMother.withNoPlugins()).loadConfigHolder(new String(inputStream.readAllBytes(), UTF_8));
             fail();
         } catch (Exception e) {
             assertThat(e.getMessage()).containsAnyOf(
@@ -50,7 +49,7 @@ public class UniqueRunIfStatusValidatorTest {
     public void shouldPassWhenEachJobContainsOnCancel() throws Exception {
         final ByteArrayInputStream inputStream = new ByteArrayInputStream(ConfigMigrator.migrate(
                 ConfigFileFixture.CONTAINS_MULTI_DIFFERENT_STATUS_RUN_IF).getBytes());
-        CruiseConfig cruiseConfig = new MagicalGoConfigXmlLoader(new ConfigCache(), ConfigElementImplementationRegistryMother.withNoPlugins()).loadConfigHolder(IOUtils.toString(inputStream, UTF_8)).config;
+        CruiseConfig cruiseConfig = new MagicalGoConfigXmlLoader(new ConfigCache(), ConfigElementImplementationRegistryMother.withNoPlugins()).loadConfigHolder(new String(inputStream.readAllBytes(), UTF_8)).config;
         assertThat(cruiseConfig).isNotNull();
     }
 }
